# redisvl-msmarco-poc-self-hosted

./: README.md  docker-compose.yml  ingest.py  ingest_multi.py  pyproject.toml  queries.ipynb  queries_dep.ipynb  test.py
